--- a/ubs/medical_query/templates/medical_query/new_patient.html
+++ b/ubs/medical_query/templates/medical_query/new_patient.html
@@ -3,12 +3,12 @@
 {% block title %}Cadastro de paciente{% endblock %}
 
 {% block body %}
-    <div class="content col-md-12">
+    <div class="content col-md-12" >
         <div class="animated fadeIn">
-            <form method="post">
+            <form method="post" >
             {% csrf_token %}
-                <div class="row">
-                    <div class="col-md-10">
+                <div class="row" >
+                    <div class="col-md-10"style="margin: 20px auto;">
                         <div class="card">
                             <div class="card-header"><strong>Paciente</strong><small> Cadastro de novo paciente</small></div>
                             <div class="card-body card-block">
