--- a/ubs/medical_query/templates/patient/list.html
+++ b/ubs/medical_query/templates/patient/list.html
@@ -11,65 +11,62 @@
 
 {% block body %}
 
-    <!-- Right Panel -->
-    <div id="right-panel" class="right-panel col-md-12">
-        <div class="content mt-3">
-            <div class="animated fadeIn">
-                <div class="row">
+    <div class="content mt-3">
+        <div class="animated fadeIn">
+            <div class="row">
 
-                    <div class="col-md-12">
-                        <div class="card">
-                            <div class="card-header">
-                                <strong class="card-title">Pacientes</strong>
-                            </div>
-                            <div class="card-body">
-                                <table class="table table-striped table-bordered">
-                                    <thead>
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <strong class="card-title">Pacientes</strong>
+                        </div>
+                        <div class="card-body">
+                            <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Telefone</th>
+                                        <th>Ações</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for object in object_list%}
                                         <tr>
-                                            <th>Name</th>
-                                            <th>Telefone</th>
-                                            <th>Ações</th>
+                                            <td>{{ object.full_name}}</td>
+
+                                            {% if object.phone %} 
+                                                <td> {{ object.phone }} </td>
+                                            {% else %} 
+                                                <td >----------------------</td>
+                                            {% endif %}
+
+                                            <td>
+                                                <div >
+                                                    <a href=""> <button type="button" class="btn btn-primary btn-sm" style="border-radius: 3px;"><i class="fa fa-eye" ></i></button> </a>
+                                                    <a href="{% url 'medical_query:update_patient' object.id %}"> <button type="button" class="btn btn-warning btn-sm" style="border-radius: 3px;"><i class="fa fa-edit" ></i></button> </a>
+                                                    <a href="{% url 'medical_query:delete_patient' object.id %}"> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i></button> </a>
+                                                </div> 
+                                            </td>
                                         </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for object in object_list%}
-                                            <tr>
-                                                <td>{{ object.full_name}}</td>
-
-                                                {% if object.phone %} 
-                                                    <td> {{ object.phone }} </td>
-                                                {% else %} 
-                                                    <td >----------------------</td>
-                                                {% endif %}
-
-                                                <td>
-                                                    <div class="card-body" >
-                                                        <button type="button" class="btn btn-primary btn-sm" style="border-radius: 3px;"><i class="fa fa-eye" ></i>&nbsp; Visualizar</button> </a>
-                                                        <a href="{% url 'medical_query:update_patient' object.id %}"> <button type="button" class="btn btn-warning btn-sm" style="border-radius: 3px;"><i class="fa fa-edit" ></i>&nbsp; Editar</button> </a>
-                                                        <a href="{% url 'medical_query:delete_patient' object.id %}"> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i>&nbsp;Deletar</button> </a>
-                                                    </div> 
-                                                </td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
                         </div>
                     </div>
-
-
                 </div>
-            </div><!-- .animated -->
-        </div><!-- .content -->
 
 
-    </div><!-- /#right-panel -->
+            </div>
+        </div><!-- .animated -->
+    </div><!-- .content -->
+
+
 
     <!-- Right Panel -->
 
 {% endblock%}
 
-{% comment %} {% block js %}
+{% block js %}
     <script src={% static "vendors/datatables.net/js/jquery.dataTables.min.js" %}></script>
     <script src={% static "vendors/datatables.net-bs4/js/dataTables.bootstrap4.min.js" %}></script>
     <script src={% static "vendors/datatables.net-buttons/js/dataTables.buttons.min.js" %}></script>
@@ -80,5 +77,5 @@
     <script src={% static "vendors/datatables.net-buttons/js/buttons.html5.min.js" %}></script>
     <script src={% static "vendors/datatables.net-buttons/js/buttons.print.min.js" %}></script>
     <script src={% static "vendors/datatables.net-buttons/js/buttons.colVis.min.js" %}></script>
-    <script src={% static "assets/js/init-scripts/data-table/datatables-init.js" %}></script>
-{% endblock%}  {% endcomment %}
+    {% comment %} <script src={% static "assets/js/init-scripts/data-table/datatables-init.js" %}></script> {% endcomment %}
+{% endblock%} 
