--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -29,18 +29,29 @@
                                         {% endfor%}
                                     </div>
                                 {%else%}
-                                    <div
-                                        class="col-md-{% if field.name in 'patient\summary\review_of_systems' %}12
-                                        {% elif field.name in 'main_complaint\current_health_history/epidemiological_history/previous_pathological_history/family_history/physiological_personal_antecedents' %}6
-                                        {% elif field.name in 'physical_exam\pa_exam\p_exam\fc_exam\fr_exam\tax_exam\peso_exam\heigth_exam' %}3         
+                                        {% if field.name in 'priority\opened'%}
+                                        
+                                            <div class="checkbox col-md-12" style="margin-top: 15px;">
+                                                <label>
+                                                    <input type="checkbox" name="{{ field.name }}" id="id_{{ field.name }}" {% if field.value %} checked
+                                                        {% endif %}> {{ field.label }}
+                                                </label>
+                                            </div>
+                                        
+                                        {%else%}
+                                            <div
+                                                class="col-md-{% if field.name in 'patient\summary\review_of_systems' %}12
+                                                {% elif field.name in 'main_complaint\current_health_history/epidemiological_history/previous_pathological_history/family_history/physiological_personal_antecedents' %}6
+                                                {% elif field.name in 'physical_exam\pa_exam\p_exam\fc_exam\fr_exam\tax_exam\peso_exam\heigth_exam' %}3         
 
-                                        {% else %}6
-                                        {% endif %} margin-bottom-15">
+                                                {% else %}6
+                                                {% endif %} margin-bottom-15">
 
-                                        <label  class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        {{ field|add_class:"form-control input-md" }}
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    </div>
+                                                <label  class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                {{ field|add_class:"form-control input-md" }}
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% endif %}
                             {%endif%}
                             {% endfor %}
                         </div>
