--- a/ubs/medical_query/templates/querys/detail.html
+++ b/ubs/medical_query/templates/querys/detail.html
@@ -6,158 +6,69 @@
 {% block body %}
 <div class="content col-md-12">
     <div class="animated fadeIn">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-header">
-                    <strong class="card-title mb-3">Consulta Realizada no Dia {{object.date}} - #{{object.id}}</strong>
-                </div>
-                <div class="card-body">
-                    <div class="mx-auto d-block">
-                        <h5 class="text-sm-center mt-2 mb-1">{{object.patient}}</h5>
-                        <div class="location text-sm-center"><i class="fa fa-map-marker"></i> Picos, Piauí</div>
-                    </div>
-                    <hr>
-                    <div class="typo-articles">
-                        <p>
-                            <strong>{{object.patient}}</strong> atendido na UBS de picos na Universidade Federal do Piauí
-                            pelo(a) profissional <strong>{{object.medical}}</strong> no dia <strong>{{object.date}}</strong>.
-                            <br> 
-                        </p>
+        <form method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-md-10" style="margin: 20px auto;">
+                    <div class="card">
+                        <div class="card-header"><strong>Consulta</strong><small> Consulta de Paciente</small>
+                        </div>
+
+                        <fieldset>
+
+                            <div class="form-group">
+                                {% for field in form %}
+                                {% if field.errors %}
+                                <div
+                                    class="col-md-{% if field.name in 'name' %}8{% elif field.name in 'main_complaint\email' %}6{% elif field.name in 'username\sex\birth_date\marital_status\phone\cpf\rg\matricula' %}4{% elif field.name in 'nome_mae\nome_pai' %}6{% else %}12{% endif %} margin-bottom-15 has-error has-feedback">
+                                    <label class="control-label">{{ field.label }}</label>
+                                    {{ field|add_class:"form-control input-md" }}
+                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
+                                    {% for error in field.errors%}
+                                    <span class="help-inline error">{{ error}}</span>
+                                    {% endfor%}
+                                </div>
+                                {%else%}
+                                {% if field.name in 'priority\opened'%}
+
+                                <div class="checkbox col-md-12" style="margin-top: 15px;">
+                                    <label>
+                                        <input type="checkbox" name="{{ field.name }}" id="id_{{ field.name }}"
+                                            {% if field.value %} checked {% endif %}> {{ field.label }}
+                                    </label>
+                                </div>
+
+                                {%else%}
+                                <div class="col-md-{% if field.name in 'patient\summary\review_of_systems' %}12
+                                                {% elif field.name in 'main_complaint\current_health_history/epidemiological_history/previous_pathological_history/family_history/physiological_personal_antecedents' %}6
+                                                {% elif field.name in 'physical_exam\pa_exam\p_exam\fc_exam\fr_exam\tax_exam\peso_exam\heigth_exam' %}3         
+
+                                                {% else %}6
+                                                {% endif %} margin-bottom-15">
+
+                                    <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                    {{ field|add_class:"form-control input-md" }}
+                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                </div>
+                                {% endif %}
+                                {%endif%}
+                                {% endfor %}
+                            </div>
+                        </fieldset>
+
                         <br>
 
-                        <h5 class="mt-2 mb-1">Dados do Atendimento</h5>
-                        
-                        <br>
-                        
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    Queixa Principal:
-                                </strong>
-                                {{object.main_complaint}}
-                            </p>
-                        </div>
+                        <div class="form-actions form-group col-md-3"><button type="submit" class="btn btn-success"
+                                style="border-radius: 3px;">Finalizar</button></div>
 
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    História da Doença Atual:
-                                </strong>
-                                {{object.current_health_history}}
-                            </p>
-                        </div>
-   
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    Revisão de Sistemas:
-                                </strong>
-                                {{object.review_of_systems}}
-                            </p>
-                        </div>
-
-
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    História Epidemiológica:
-                                </strong>
-                                {{object.epidemiological_history}}
-                            </p>
-                        </div>
-
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    História Patológica Regressa:
-                                </strong>
-                                {{object.previous_pathological_history}}
-                            </p>
-                        </div>
-
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    História Familiar:
-                                </strong>
-                                {{object.family_history}}
-                            </p>
-                        </div>
-
-
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    Antecedentes Pessoais Fisiológicas:
-                                </strong>
-                                {{object.physiological_personal_antecedents}}
-                            </p>
-                        </div>
-
-
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    Sumário dos Postos Principais da História e Exame Físico:
-                                </strong>
-                                {{object.summary}}
-                            </p>
-                        </div>
-
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    Hipótese(s) Diagnósticada(s):
-                                </strong>
-                                {{object.diagnostic_hypotheses}}
-                            </p>
-                        </div>
-
-
-                        <div class="typo-articles col-md-12">
-                            <p>
-                                <strong style="font-size: 17px;">
-                                    Conduta Tomada:
-                                </strong>
-                                {{object.take_duct}}
-                            </p>
-                        </div>
                     </div>
-  
-                    
-                            <table class="table table-striped table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th>PA(mmHg)</th>
-                                        <th>P(bpm)</th>
-                                        <th>FC(bpm)</th>
-                                        <th>FR(irpm)</th>
-                                        <th>TAX(ºC)</th>
-                                        <th>Peso(g)</th>
-                                        <th>Altura(cm)</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
 
-                                    <tr>
-                                        <td>{{ object.pa_exam}}</td>
-                                        <td>{{ object.p_exam}}</td>
-                                        <td> {{ object.fc_exam }} </td>
-                                        <td> {{ object.fr_exam }} </td>
-                                        <td> {{ object.tax_exam }} </td>
-                                        <td> {{ object.peso_exam }} </td>
-                                        <td> {{ object.heigth_exam }} </td>
-                            
-                                    </tr>
-
-                                </tbody>
-                            </table>
-
-                    
                 </div>
             </div>
-        </div>
     </div>
+</div>
+</form>
+</div>
 </div>
 
 {% endblock %}
