--- a/ubs/medical_query/templates/patient/list.html
+++ b/ubs/medical_query/templates/patient/list.html
@@ -42,7 +42,7 @@
 
                                             <td>
                                                 <div >
-                                                    <a href=""> <button type="button" class="btn btn-primary btn-sm" style="border-radius: 3px;"><i class="fa fa-eye" ></i></button> </a>
+                                                    <a href="{% url 'medical_query:detail_patient' object.id %}"> <button type="button" class="btn btn-primary btn-sm" style="border-radius: 3px;"><i class="fa fa-eye" ></i></button> </a>
                                                     <a href="{% url 'medical_query:update_patient' object.id %}"> <button type="button" class="btn btn-warning btn-sm" style="border-radius: 3px;"><i class="fa fa-edit" ></i></button> </a>
                                                     <a href="{% url 'medical_query:delete_patient' object.id %}"> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i></button> </a>
                                                 </div> 
