fix: salvando os forms de patient e phone na view CreatePatient

--- a/ubs/patient/templates/patient/list.html
+++ b/ubs/patient/templates/patient/list.html
@@ -34,8 +34,8 @@
                                         <tr>
                                             <td>{{ object.full_name}}</td>
 
-                                            {% if object.phone %} 
-                                                <td> {{ object.phone }} </td>
+                                            {% if object.get_phone %} 
+                                                <td> {{ object.get_phone }} </td>
                                             {% else %} 
                                                 <td >----------------------</td>
                                             {% endif %}
