feat: views para editar pacientes

--- a/ubs/patient/templates/patient/detail.html
+++ b/ubs/patient/templates/patient/detail.html
@@ -41,7 +41,7 @@
                         Endereço: <span class="pull-right"> {{ object.address}} </span>
                     </li>
                     <li class="list-group-item">
-                        Telefone: <span class="pull-right"> {{ object.phone}} </span>
+                        Telefone: <span class="pull-right"> {{ object.get_phone}} </span>
                     </li>
                     <li class="list-group-item">
                         Fax: <span class="pull-right"> {{ object.fax}} </span>
