--- a/ubs/medical_query/templates/querys/history.html
+++ b/ubs/medical_query/templates/querys/history.html
@@ -36,8 +36,8 @@
                                         {% if not object.opened %}
                                             <tr >
                                                 <td>{{ object.id}}</td>
-                                                <td>{{ object.patient}}</td>
-                                                <td> {{ object.date }} </td>
+                                                <td>{{ object.Patient_idPatient}}</td>
+                                                <td> {{ object.created_on }} </td>
                                     
                                                 <td class="text-center">
                                                     
