fix: corrigido erro ao salvar o form do exame fisico

--- a/ubs/medical_query/templates/querys/detail.html
+++ b/ubs/medical_query/templates/querys/detail.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-md-10" style="margin: 20px auto;">
                     <div class="card">
-                        <div class="card-header"><strong>Consulta</strong><small> Consulta de Paciente</small>
+                        <div class="card-header"><strong>{{object.get_type_query}}</strong> - {{object.Patient_idPatient}}
                         </div>
 
                         <fieldset>
