--- a/ubs/core/templates/core/base.html
+++ b/ubs/core/templates/core/base.html
@@ -57,7 +57,10 @@
                     </li>
                     <h3 class="menu-title">Pacientes</h3><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>Components</a>
+                        <a href=" {% url 'patient:list_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar todos</a>
+                    </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href=" {% url 'patient:add_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-plus-square"></i>Adicionar</a>
                     </li>
 
                     <h3 class="menu-title">Consultas</h3><!-- /.menu-title -->
