--- a/ubs/patient/templates/patient/list.html
+++ b/ubs/patient/templates/patient/list.html
@@ -44,7 +44,7 @@
                                                 <div >
                                                     <a href="{% url 'patient:detail_patient' object.id %}"> <button type="button" class="btn btn-primary btn-sm" style="border-radius: 3px;"><i class="fa fa-eye" ></i></button> </a>
                                                     <a href="{% url 'patient:update_patient' object.id %}"> <button type="button" class="btn btn-warning btn-sm" style="border-radius: 3px;"><i class="fa fa-edit" ></i></button> </a>
-                                                    <a href="{% url 'patient:delete_patient' object.id %}"> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i></button> </a>
+                                                    {% comment %} <a href="{% url 'patient:delete_patient' object.id %}"> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i></button> </a> {% endcomment %}
                                                 </div> 
                                             </td>
                                         </tr>
