criada views de listagens de usuarios

--- a/ubs/accounts/templates/users/admin/add.html
+++ b/ubs/accounts/templates/users/admin/add.html
@@ -55,8 +55,8 @@
 
                     <div class="alert alert-danger">
                         <strong>Atenção:</strong> 
-                        Você está adicionado ao sistema um usuário com permissões de administrador. Usuários administradores 
-                        possuem acesso <strong>Total</strong> a todos os recursos do sistema.
+                        Você está adicionado ao sistema um usuário com permissões de <strong>ADMINISTRADOR</strong> Usuários administradores 
+                        possuem acesso <strong>TOTAL</strong> a todos os recursos do sistema.
                     </div>
 
                 </div>
