views para editar usuarios

--- a/ubs/accounts/templates/users/admin/list.html
+++ b/ubs/accounts/templates/users/admin/list.html
@@ -47,7 +47,7 @@
                                                 </button> 
                                             </a>
 
-                                            <a href="{% url 'patient:update_patient' object.id %}"> 
+                                            <a href="{% url 'accounts:update_admin' object.id %}"> 
                                                 <button
                                                     type="button" class="btn btn-warning btn-sm"
                                                     style="border-radius: 3px;"
@@ -57,7 +57,7 @@
                                             </a>
 
 
-                                            <a href="{% url 'patient:update_patient' object.id %}">
+                                            <a href="{% url 'accounts:update_admin' object.id %}">
                                                 <button 
                                                     type="button" 
                                                     class="btn btn-danger btn-sm" 
