--- a/ubs/accounts/templates/users/clerk/list.html
+++ b/ubs/accounts/templates/users/clerk/list.html
@@ -47,7 +47,7 @@
                                                 </button>
                                             </a>
 
-                                            <a href="{% url 'patient:update_patient' object.id %}">
+                                            <a href="{% url 'accounts:update_clerk' object.id %}">
                                                 <button type="button" class="btn btn-warning btn-sm"
                                                     style="border-radius: 3px;">
                                                     <i class="fa fa-edit"></i>
